styles/facts.css
.intro-container {
    display:flex;
    flex-direction: row;
    gap: 10px;
    align-content:flex-start;
    
}

.box {
    display: flex;
    border: 5px solid darkblue;
    flex:1;
}

.intro {
    text-align: justify;
    align-content: center;
}

#intro-img {
    display: grid;
    max-width: 100%;
    max-height: 100%;
}

.intro-image-container {

    background-color: brown;
    
}

.facts-container {
    display:grid;
    grid-template-columns: 50% 50%;
    justify-items: center;
}

.count-title {
    text-align: center;
}

.list {
    display:grid;
    text-align: justify;
    grid-template-rows: 20% 80%;

}

